--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(meanImp_emmeans)
 export(mi4limma)
 export(multi.impute)
 export(proj_matrix)
+export(protdatasim)
 export(rubin1.all)
 export(rubin1.one)
 export(rubin2.all)
@@ -23,4 +24,5 @@ importFrom(stats,median)
 importFrom(stats,pchisq)
 importFrom(stats,pf)
 importFrom(stats,pt)
+importFrom(stats,rnorm)
 importFrom(stats,vcov)
