--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: mi4p
 Type: Package
 Title: Multiple Imputation for Proteomics
-Version: 0.6
-Date: 2021-08-15
+Version: 0.7
+Date: 2021-08-18
 Depends: R (>= 3.5.0)
 biocViews:
 Imports: 
@@ -22,12 +22,20 @@ Suggests:
 Authors@R: c(
 	person(given = "Marie", family= "Chion", role = c("aut"), email = "mariechion@protonmail.com", comment = c(ORCID = "0000-0001-8956-8388")),
 	person(given = "Christine", family= "Carapito", role = c("aut"), email = "ccarapito@unistra.fr", comment = c(ORCID = "0000-0002-0079-319X")),
-	person(given = "Frederic", family= "Bertrand", role = c("cre", "aut"), email = "frederic.bertrand@utt.fr", comment = c(ORCID = "0000-0002-0837-8281"))
-	)
-Author: Marie Chion [aut] (<https://orcid.org/0000-0001-8956-8388>), Christine Carapito [aut] (<https://orcid.org/0000-0002-0079-319X>), Frederic Bertrand [cre, aut] (<https://orcid.org/0000-0002-0837-8281>)
+	person(given = "Frederic", family= "Bertrand", role = c("cre", "aut"), email = "frederic.bertrand@utt.fr", comment = c(ORCID = "0000-0002-0837-8281")),
+  person(given = "Gordon", family= "Smyth", role = c("ctb")),
+  person(given = "Davis", family= "McCarthy", role = c("ctb")),
+  person(given = "Hélène", family= "Borges", role = c("ctb")),
+  person(given = "Thomas", family= "Burger", role = c("ctb")),
+  person(given = "Quentin", family= "Giai-Gianetto", role = c("ctb")),
+  person(given = "Samuel", family= "Wieczorek", role = c("ctb"))
+  )
+Author: Marie Chion [aut] (<https://orcid.org/0000-0001-8956-8388>), Christine Carapito [aut] (<https://orcid.org/0000-0002-0079-319X>), Frederic Bertrand [cre, aut] (<https://orcid.org/0000-0002-0837-8281>), Gordon Smyth [ctb], Davis McCarthy [ctb], Hélène Borges [ctb], Thomas Burger [ctb], Quentin Giai-Gianetto [ctb], Samuel Wieczorek [ctb] 
 Maintainer: Frederic Bertrand <frederic.bertrand@utt.fr>
+Contact: Marie Chion <marie.chion@protonmail.fr>, Frederic Bertrand <frederic.bertrand@utt.fr>
 Description: A framework for multiple imputation for proteomics is proposed by Marie Chion, Christine Carapito and Frederic Bertrand (2021) <arxiv:2108.07086>. It is dedicated to dealing with multiple imputation for proteomics.
 License: GPL (>= 2)
+Copyright: See the file COPYRIGHTS
 Encoding: UTF-8
 Classification/MSC: 62J05, 62J07, 62J99, 92C42
 VignetteBuilder: knitr
