--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,12 +20,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-      - name: Install ghostscript on macOS
+       - name: Install XQuartz on macOS
         if: runner.os == 'macOS'
-        run: brew install ghostscript
-      - name: Install Magick on macOS
-        if: runner.os == 'macOS'
-        run: brew install imagemagick
+        run: brew cask install xquartz
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
