--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,7 @@ Suggests:
     Biobase, 
     knitr,
     R.rsp,
+    markdown,
     rmarkdown
 Authors@R: c(
 	person(given = "Marie", family= "Chion", role = c("aut"), email = "mariechion@protonmail.com", comment = c(ORCID = "0000-0001-8956-8388")),
@@ -38,7 +39,7 @@ License: GPL (>= 2)
 Copyright: See the file COPYRIGHTS
 Encoding: UTF-8
 Classification/MSC: 62J05, 62J07, 62J99, 92C42
-VignetteBuilder: rmarkdown
+VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 URL: https://mariechion.github.io/mi4p/, https://github.com/mariechion/mi4p/
 BugReports: https://github.com/mariechion/mi4p/issues/
