Add LOCAL env to github actions

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -16,6 +16,7 @@ jobs:
   R-CMD-check:
     runs-on: macOS-latest
     env:
+      LOCAL: "TRUE"
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
