Minor code fix ti get rid of a CRAN check note

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Suggests:
     markdown,
     prettydoc,
     rmarkdown,
+    DAPAR,
     ProteoMM
 Authors@R: c(
 	person(given = "Marie", family= "Chion", role = c("aut"), email = "mariechion@protonmail.com", comment = c(ORCID = "0000-0001-8956-8388")),
